--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
+faster_whisper==1.0.3
 ffmpeg_python==0.2.0
 gradio==4.44.0
-langchain_core==0.3.5
+langchain==0.3.1
+langchain_core==0.3.6
 langchain_ollama==0.2.0
 langchain_text_splitters==0.3.0
+langfuse==2.51.1
+langgraph==0.2.28
+python-dotenv==1.0.1
 torch==2.4.1
-torchaudio==2.4.1
-transformers==4.44.2
